[package]
name = "senya"
version = "0.1.0"
authors = ["sinkuu <sinkuu@sinkuu.xyz>"]
license = "MIT/Apache-2.0"

[dependencies]
hyper = "0.11.6"
url = "1.5.1"
futures = "0.1.16"
itertools = "0.7.0"
matches = "0.1.6"
vec_map = "0.8.0"
regex = "0.2.2"
fxhash = "0.2.1"

[features]
#default = ["simd-accel"]
simd-accel = ["regex/simd-accel"]
